--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hello Navi!</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <p id="greeting">Loading ...</p>
