enhance the d3.tree demo with labels on top of paths

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <p id="greeting">Loading ...</p>
+    <!-- <p id="greeting">Loading ...</p> -->
 
     <!-- FIXME: speed up libs for testing -->
     <!-- 为了加快本地开发编译速度，暂时在这里引入 d3（而不是 import 进 .ts 文件） -->
